# EyesOnIt-python-sdk

./: .gitignore  EyesOnIt.py  LICENSE.txt  README.md  eoi_response.py  pyproject.toml  requirements.txt  setup.py
data/elements/: eoi_alerting.py
data/inputs/: eoi_add_stream_inputs.py  eoi_process_image_inputs.py
samples/: EyesOnItSDK_sample.ipynb  single_image_client.py  stream_monitoring_client.py
src/EyesOnIt/: __init__.py  eoi_add_stream_inputs.py  eoi_monitor_stream_inputs.py  eoi_process_image_inputs.py  eoi_stream_url_input.py  eoi_utils.py  sdk.py
src/EyesOnIt/elements/: eoi_alerting.py  eoi_bounding_box.py  eoi_efficient_detection.py  eoi_genetec.py  eoi_genetec_alerting.py  eoi_motion_detection.py  eoi_object_description.py  eoi_prompt.py  eoi_region.py
