[project]
name = "EyesOnIt"
version = "2.0.4"
description = "Advanced Large Vision Model computer vision supporting usage through no-code UI, SDK and REST interfaces."
authors = [{ name = "EyesOnIt", email = "support@eyesonit.us" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pydantic", "Pillow", "requests"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"